# dqc-workshop-notebook

./: .gitignore  .mcp.json  README.md  _quarto.yml  index.qmd  install_tutorial_dependencies_pip.py  justfile  pyproject.toml  tutorial.ipynb  tutorial.py  tutorial.qmd  tutorial_marimo.py
__marimo__/session/: tutorial_marimo.py.json
_extensions/marimo-team/marimo/: marimo-engine-v0.4.5.js
experiments/ghz-duration/: experiment.py  transpile-all.py
templates/: _qc-shared.scss  qc-dark-theme.scss  qc-light-theme.scss  qc-theme.css  qc_dark_mpl.py  qc_light_mpl.py  style_guide.css
