[project]
name = "dqc-workshop"
version = "0.1.0"
description = "Distributed quantum computing workshop notebook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "marimo",
    "pandas",
    "matplotlib",
    "qiskit>=1.0",
    "qiskit-aer",
    "qiskit-ibm-runtime",
]

[project.optional-dependencies]
comparison = ["bosonic-sdk-felix"]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
default = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
bosonic-sdk-felix = { index = "test-pypi" }

[dependency-groups]
dev = []

[tool.marimo]
tags = ["workshop", "quantum-computing"]
